--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="https://gmpg.org/xfn/11">
+	
+	<meta name="p:domain_verify" content="ac749897ed05d5e29c39ad60272d813b"/>
 
 <title>Page not found &#8211; abusayedit</title>
 <meta name='robots' content='max-image-preview:large' />
